--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                   <div class="hidden sm:ml-6 sm:block">
                     <div class="flex space-x-4">
-                      <a href="mainPage.html" aria-current="page" class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
+                      <a href="index.html" aria-current="page" class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
                       <a href="projects.html" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Projects</a>
                       <a href="#contact" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Contact</a>
                     </div>
@@ -35,7 +35,7 @@
           
             <el-disclosure id="mobile-menu" hidden class="block sm:hidden">
               <div class="space-y-1 px-2 pt-2 pb-3">
-                <a href="mainPage.html" aria-current="page" class="block rounded-md bg-gray-950/50 px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
+                <a href="index.html" aria-current="page" class="block rounded-md bg-gray-950/50 px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
                 <a href="projects.html" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Projects</a>
                 <a href="#contact" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Contact</a>
               </div>
@@ -48,7 +48,7 @@
       <article class="w-full grid place-items-center gap-16 mt-8">
         <section class="flex flex-col items-start gap-8 md:flex-row-reverse md:items-center md:justify-between" >
           <div class="relative grid h-[233px] w-[300px] place-items-center md:mr-8 flex-none">
-            <img src="../Images-documents/ProfileImage.jpeg" alt="Placeholder alt" class="  h-[233px] w-[300px] origin-bottom rounded-lg bg-white object-cover hover:cursor-grab active:cursor-grabbing" style="grid-area: 1 / 1; opacity: 1; transform: scale(0.98);">
+            <img src="Images-documents/ProfileImage.jpeg" alt="Placeholder alt" class="  h-[233px] w-[300px] origin-bottom rounded-lg bg-white object-cover hover:cursor-grab active:cursor-grabbing" style="grid-area: 1 / 1; opacity: 1; transform: scale(0.98);">
           </div>
           <div class="flex max-w-[320px] flex-col sm:max-w-full gap-3">
             <h1 class="title text-balance text-4xl sm:text-5xl text-white font-serif">Hi, I'm Ibrahim Ouarrach 😁</h1>
@@ -64,7 +64,7 @@
               for fun.
             </p>  
             <div class=" flex flex-row justify-normal gap-8">
-              <a href="../Images-documents/resume ibrahim ouarrach 2025.pdf" target="_blank" rel="noopener noreferrer"
+              <a href="Images-documents/resume ibrahim ouarrach 2025.pdf" target="_blank" rel="noopener noreferrer"
               class="hover:bg-blue-600 inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2 w-28">
                 <span class="font-semibold text-white">Resume</span>
               </a>
@@ -88,7 +88,7 @@
                 <li class="relative ml-10 py-4">
                   <a href="https://www.usc.edu/" target="_blank" class="absolute -left-16 top-4 flex items-center justify-center rounded-full bg-white">
                     <span class="relative flex shrink-0 overflow-hidden rounded-full size-12 border">
-                      <img class="aspect-square h-full w-full bg-background object-contain" src="../Images-documents/USC_Trojans_logo.svg" alt="usc logo">
+                      <img class="aspect-square h-full w-full bg-background object-contain" src="Images-documents/USC_Trojans_logo.svg" alt="usc logo">
                     </span>
                   </a>
                   <div class="flex flex-1 flex-col justify-start gap-0"> 
@@ -113,7 +113,7 @@
                 <li class="relative ml-10 py-4">
                   <a href="https://www.csudh.edu/" target="_blank" class="absolute -left-16 top-4 flex items-center justify-center rounded-full bg-white">
                     <span class="relative flex shrink-0 overflow-hidden rounded-full size-12 border">
-                      <img class="aspect-square h-full w-full bg-background object-cover " src="../Images-documents/csudh.png" alt="csudh logo">
+                      <img class="aspect-square h-full w-full bg-background object-cover " src="Images-documents/csudh.png" alt="csudh logo">
                     </span>
                   </a>
                   <div class="flex flex-1 flex-col justify-start gap-0"> 
