--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                 <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                   <div class="hidden sm:ml-6 sm:block">
                     <div class="flex space-x-4">
-                        <a href="mainPage.html" aria-current="page" class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
+                        <a href="index.html" aria-current="page" class="rounded-md bg-gray-950/50 px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
                         <a href="projects.html" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Projects</a>
                         <a href="#contactt" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-white/5 hover:text-white">Contact</a>
                     </div>
@@ -34,7 +34,7 @@
           
             <el-disclosure id="mobile-menu" hidden class="block sm:hidden">
               <div class="space-y-1 px-2 pt-2 pb-3">
-                <a href="mainPage.html" aria-current="page" class="block rounded-md bg-gray-950/50 px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
+                <a href="index.html" aria-current="page" class="block rounded-md bg-gray-950/50 px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Home</a>
                 <a href="projects.html" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Projects</a>
                 <a href="#contactt" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-white/5 hover:text-white">Contact</a>
               </div>
